examples/test/testpolicy12624.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12624
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key36: value21
      key5: value40
      key11: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value39
          key31: value42
      podSelector:
        matchLabels:
          key22: value7
          key47: value42
          key35: value5
